2006-12-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterBehaviour.xs: Add support for implementing
	a Clutter::Behaviour in pure perl; update the callback
	for the Clutter::Behaviour::actors_foreach() method;
	bind Clutter::Behaviour::get_actors().

	* examples/behaviour.pl: Show how the pure perl behaviour
	works; update the path behaviour method call - don't use
	an arrayref of arrayrefs: just append knots as arrayrefs.

2006-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterTypes.xs: Remove the virtual accessors:
	we threat a ClutterKnot as an array reference, and
	the type is too simple to warrant the extra-complexity
	of being a blessed reference.

	* doctypes: Add timestamp.

2006-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterMedia.xs: Add the perl machinery needed
	in order to implement a Clutter::Media interface in
	pure perl.

	* xs/ClutterBehaviourPath.xs: Wrap ClutterKnot as
	an array of two elements; unwrap it from either an
	array or an hash references. This allows us to use
	the object created using the Clutter::Knot::new()
	constructor or to use perl native objects for brevity.

	Bind the clutter_knot_equal() function as a class
	method.

	Require an array of knots instead of an array
	reference in both the Clutter::Behavior::Path
	constructor and the add_knot() method.

	* t/ClutterBehaviourPath.t: Update the test suite.

	* Clutter.pm: Overload '==' for the Clutter::Knot
	object, using the equal() class method.

2006-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Add the difference from the C library
	to the Perl bindings to the Clutter pod.

	* examples/behave.pl: Add a bit of padding to the
	texture.

	* xs/ClutterBehaviourPath.xs: Collapse the add_knots()
	and add_knot() Clutter::Behaviour::Path methods into
	a single Clutter::Behaviour::Path::add_knot(), which
	accepts an array of Clutter::Knot objects.

2006-12-03  Emmanuele Bassi  <ebassi@openedhand.com>

	A examples/behaviour.pl